@@ -45,6 +45,7 @@
 #include "write-po.h"
 #include "write-properties.h"
 #include "write-stringtable.h"
+#include "color.h"
 #include "msgl-cat.h"
 #include "exit.h"
 #include "propername.h"
@@ -63,6 +64,7 @@ static const char *to_code;
 static const struct option long_options[] =
 {
   { "add-location", no_argument, &line_comment, 1 },
+  { "color", optional_argument, NULL, CHAR_MAX + 5 },
   { "directory", required_argument, NULL, 'D' },
   { "escape", no_argument, NULL, 'E' },
   { "files-from", required_argument, NULL, 'f' },
@@ -80,6 +82,7 @@ static const struct option long_options[] =
   { "strict", no_argument, NULL, 'S' },
   { "stringtable-input", no_argument, NULL, CHAR_MAX + 3 },
   { "stringtable-output", no_argument, NULL, CHAR_MAX + 4 },
+  { "style", required_argument, NULL, CHAR_MAX + 6 },
   { "to-code", required_argument, NULL, 't' },
   { "unique", no_argument, NULL, 'u' },
   { "use-first", no_argument, NULL, CHAR_MAX + 1 },
@@ -258,6 +261,15 @@ main (int argc, char **argv)
 	output_syntax = &output_format_stringtable;
 	break;
 
+      case CHAR_MAX + 5: /* --color */
+	if (handle_color_option (optarg))
+	  usage (EXIT_FAILURE);
+	break;
+
+      case CHAR_MAX + 6: /* --style */
+	handle_style_option (optarg);
+	break;
+
       default:
 	usage (EXIT_FAILURE);
 	/* NOTREACHED */
@@ -280,6 +292,12 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\
   /* Help is requested.  */
   if (do_help)
     usage (EXIT_SUCCESS);
+
+  if (color_test_mode)
+    {
+      print_color_test ();
+      exit (EXIT_SUCCESS);
+    }
 
   /* Verify selected options.  */
   if (!line_comment && sort_by_filepos)
@@ -400,6 +418,12 @@ Output details:\n"));
       printf (_("\
       --use-first             use first available translation for each\n\
                               message, don't merge several translations\n"));
+      printf (_("\
+      --color                 use colors and other text attributes always\n\
+      --color=WHEN            use colors and other text attributes if WHEN.\n\
+                              WHEN may be 'always', 'never', 'auto', or 'html'.\n"));
+      printf (_("\
+      --style=STYLEFILE       specify CSS style rule file for --color\n"));
       printf (_("\
   -e, --no-escape             do not use C escapes in output (default)\n"));
       printf (_("\
